--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-	"name": "MyPortfolio",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"react": "~15.4.1",
-		"react-native": "0.42.0",
-		"react-redux": "^4.4.6",
-		"redux": "^3.6.0",
-		"redux-thunk": "^2.1.0",
+  "name": "MyPortfolio",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "axios": "^0.15.3",
+    "bluebird": "^3.4.6",
+    "cookie": "^0.3.1",
+    "lodash": "^4.17.2",
+    "moment": "^2.17.1",
+    "native-base": "^2.0.12",
+    "react": "~15.4.1",
+    "react-addons-update": "^15.4.1",
+    "react-native": "0.42.0",
     "react-native-router-flux": "^3.37.0",
-		"lodash": "^4.17.2",
-		"moment": "^2.17.1",
-		"axios": "^0.15.3",
-		"bluebird": "^3.4.6",
-		"cookie": "^0.3.1",
-    "react-addons-update": "^15.4.1"
-	},
-	"devDependencies": {
-		"babel-jest": "19.0.0",
-		"babel-preset-react-native": "1.9.1",
-		"jest": "19.0.2",
-		"react-test-renderer": "~15.4.1"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
+  },
+  "devDependencies": {
+    "babel-jest": "19.0.0",
+    "babel-preset-react-native": "1.9.1",
+    "jest": "19.0.2",
+    "react-test-renderer": "~15.4.1"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
