--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "native-base": "^2.0.12",
     "react": "~15.4.1",
     "react-addons-update": "^15.4.1",
-    "react-native": "0.42.0",
-    "react-native-router-flux": "^3.37.0",
+    "react-native": "0.44.0",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "react-navigation": "^1.0.0-beta.9",
+    "react-native-elements": "^0.12.0",
+    "remote-redux-devtools": "^0.5.10"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
